--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -60,7 +60,7 @@
                 android:layout_marginEnd="1dp"
                 android:textColor="@color/colorTextView"/>
             <TextView
-                android:id="@+id/genre_name"
+                android:id="@+id/artist_genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Hip-Hop"
@@ -117,7 +117,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            tools:text="Buy"
+            android:text="@string/text_buy"
             android:textColor="@color/colorListItem"
             android:background="@drawable/rounded_button"/>
     </LinearLayout>
